--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
-h1{
-    color: red;
+ol{
+    background-color: yellow;
 }
-p{
-    color: green;
+ul{
+    background-color: black;
+    color: white;
+}
+span{
+    color: red;
 }
