--- a/style.css
+++ b/style.css
@@ -1,10 +1,24 @@
-span{
-    border: 2px solid green;
-}
 p{
-    padding: 30px;
-    border: 2px solid red;
-    width: 500px;
-    height: 100px;
-    margin: 20px;
+    margin: 0px;
+}
+.Primer-Contenedor{
+    color: white;
+    background-color: rgb(41, 41, 41);    
+    padding: 5px;
+    text-align: center;
+}
+.Segundo-Contenedor{
+    background-image: url(images/ChicaLaptop.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 600px;
+}
+.Tercer-Contenedor{
+    width: 100%;
+    height: 300px;
+    background-color: #fdff9f;
+    background-image: url(images/MakeItRealLogo.png);
+    background-repeat: no-repeat;
+    background-position: center center;
 }
