--- a/style.css
+++ b/style.css
@@ -1,54 +1,41 @@
-.Message{
+h1,h2,h3{
+    margin-top: 20px;
+    margin-bottom: 20px;
     text-align: center;
-    border: dashed 3px blue;
-    width: 370px;
-    height: 100px;
-    padding-bottom: 20px;
-    position: fixed;
+}
+.Contenedor1{
+    width: 100%;
+    height: 37vh;
+    background-color: #1c2742;
+}
+#Titulo{
+    margin: auto;
+    color: white;
+    position: relative;
     top: 40%;
-    right: 5%;
 }
-.Head{
-    width: 300px;
-    height: 300px;
-    background-color: cadetblue;
+.Contenedor2{
+    width: 100%;
+    height: 16vh;
+    background-color: white;
+}
+.Productos{
+    width: 100%;
+    height: 37vh;
+    background-color: #1c2742;
+    color: white;
+    text-align: center;
+}
+.Productos > div{
     position: relative;
+    top: 30px;
 }
-.Eye{
-    width: 75px;
-    height: 75px;
-    background-color: burlywood;
-    position: absolute;
-    right: 0px;
-    top: 20%;
+.Enlace:link{
+    color: red;
 }
-.Pupil{
-    width: 15px;
-    height: 15px;
-    background-color: black;
-    position: absolute;
-    top: 35%;
-    right: 0px;
+.Enlace:visited{
+    color: green;
 }
-.Mouth{
-    width: 40%;
-    height: 5%;
-    background-color: pink;
-    position: absolute;
-    top: 75%;
-    right: 0px;
-}
-.Body{
-    width: 230px;
-    height: 350px;
-    background-color: black;
-    position: relative
-}
-.Arm{
-    width: 155px;
-    height: 40px;
-    background-color: red;
-    position: relative;
-    left: 63%;
-    top: 30%;
+.Enlace:hover{
+    color: purple;
 }
